kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy-vpn-service
  namespace: proxy-vpn
spec:
  selector:
    app: proxy-vpn
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
  type: LoadBalancer
